Serial and ConcMarkSweep do not unload strings when class unloading is disabled

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b143

      When working on JDK-8114823 I realized that the different GCs handle unloading of strings differently. When fixing that issue I made sure that G1 and Parallel now works the same way. That is, strings are unloaded even if class unloading is disabled (-XX:-ClassUnloading).

      Running the test hotspot/test/runtime/interned/SanityTest.java with -XX:-ClassUnloading shows the issue with Serial and ConcMarkSweep.

        There are no Sub-Tasks for this issue.

            Assignee:
            Stefan Johansson
            Reporter:
            Stefan Johansson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: