8165949: Serial and ConcMarkSweep do not unload strings when class unloading is disabled

Reviewed-by: mgerdin, tschatzl, stefank